--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "1.1.4",
     "@radix-ui/react-label": "^2.1.7",
@@ -24,8 +27,10 @@
     "dotenv": "^17.0.1",
     "lucide-react": "^0.454.0",
     "mongoose": "^8.0.0",
-    "next": "latest",
+    "next": "^14.2.30",
     "next-auth": "^4.24.0",
+    "next-themes": "^0.4.6",
+    "pnpm": "^10.12.4",
     "react": "latest",
     "react-dom": "latest",
     "tailwind-merge": "^2.0.0",
