--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
+    "cmdk": "^1.1.1",
     "dotenv": "^17.0.1",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
@@ -51,21 +52,24 @@
     "next-auth": "^4.24.0",
     "next-themes": "^0.4.6",
     "pnpm": "^10.12.4",
-    "react": "latest",
+    "react": "^18.3.1",
     "react-day-picker": "^9.7.0",
-    "react-dom": "latest",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.59.0",
     "react-resizable-panels": "^3.0.3",
     "recharts": "^3.0.2",
     "sonner": "^2.0.6",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/recharts": "^1.8.29",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
