--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cmdk": "^1.1.1",
     "dotenv": "^17.0.1",
     "embla-carousel-react": "^8.6.0",
+    "formidable": "^3.5.4",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.454.0",
     "mongoose": "^8.0.0",
